// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component opens clicked section 1`] = `
<ul
  className="Accordion"
>
  <li
    className="AccordionSection"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="AccordionSection"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
    <div
      className="content"
    >
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </div>
  </li>
  <li
    className="AccordionSection"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`Accordion Component opens one section at a time  1`] = `
<ul
  className="Accordion"
>
  <li
    className="AccordionSection"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="AccordionSection"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    className="AccordionSection"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
    <div
      className="content"
    >
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </div>
  </li>
</ul>
`;

exports[`Accordion Component renders empty given no Accordion without any errors 1`] = `
<ul
  className="Accordion"
/>
`;

exports[`Accordion Component renders no sections by default 1`] = `
<ul
  className="Accordion"
>
  <li
    className="AccordionSection"
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    className="AccordionSection"
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    className="AccordionSection"
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;
